# GameKernel

./: .gitignore  .gitmodules  .tasklist.el  CMakeLists.txt  GruntCMake.json  Gruntfile.js  LICENSE  README.md  TODO
CMake/: cxx_features.cmake
CMake/pkg/: CMakeSetup.cmake
examples/: CMakeLists.txt  example.hpp  example1.cpp  example1a.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp  main.cpp
examples/res/: platformer_sprites.json  platformer_sprites.txt
gk/: CMakeLists.txt  box2d.cpp  c-api.cpp  errors.cpp  gk.cpp  gl.cpp  gl_state.cpp  nvg.cpp  spritesheet.cpp  transform.cpp
gk++/: CMakeLists.txt  gk++.cpp
gk++/include/gk/: gk++.hpp  gk++cmd.hpp  gk++list.hpp  gk++util.hpp
gk/gl3/: gl3.cpp  gl3_cmd_quad.cpp  gl3_cmd_rt.cpp
gk/include-int/gk/: b2.hpp  gk.hpp  gl.hpp  glprogram.hpp  glstate.hpp  glutil.hpp  log.hpp  nvg.hpp
gk/include-int/gk/glstate/: buffer.hpp  config.hpp  global.hpp  pds.hpp  program.hpp  tex.hpp  vao.hpp
gk/include/gk/: b2.hpp  b2d.hpp  base.h  box2d.h  constants.h  core.h  coreconst.h  gk.h  gk.hpp  gl.h  math.h  nanovg.h  path.h  spritesheet.h  transform.h
gk/spritesheet/: ssf_texturepacker_json.cpp
include/gk/: gk.h  gl.hpp  nvg.hpp  spritesheet.hpp
src/: errors.cpp  gk.cpp  gl.cpp  nvg.cpp  spritesheet.cpp  transform.cpp
src/gl2/: gl2.cpp
src/gl3/: gl3.cpp  gl3_cmd_quad.cpp
src/spritesheet/: ssf_texturepacker_json.cpp
